--- a/docs/team/weiyang13.adoc
+++ b/docs/team/weiyang13.adoc
@@ -6,34 +6,17 @@
 :note-caption: :information_source:
 :warning-caption: :warning:
 
-The following document is a portfolio of software engineering projects I have participated in. The purpose
-of this document is to give an overview of my contributions to these projects, and to thus highlight my
-capabilities as a software engineer.
-
 == PROJECT: IchiFund
 
 '''
 
 == Overview
 
-IchiFund is a desktop finance management application for students to manage transactions, budgets and loans.
-The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is therefore optimised for
-students that
-
+This portfolio documents my contributions towards the project, IchiFund, which is part of an introductory software
+engineering module, CS2103T. My team (of 5) was tasked to morph or enhance an existing address book software.
+Our resulting product, IchiFund, is a desktop finance management application for students to manage transactions, budgets and loans.
+It is optimised for students that prefer using a CLI.
 My role was to develop the https://ay1920s1-cs2103t-w12-4.github.io/main/UserGuide.html#Transactions[Transactions] component of the application.
-This document summarises the contributions I have made to this project within and beyond my role as a developer.
-
-=== Callouts
-Note the following callouts used in this document:
-
-[TIP]
-This callout shares informative tips. While these tips are not vital, the information provided may prove useful to you.
-
-[NOTE]
-This callout shares noteworthy information that can enhance your understanding of the document.
-
-[WARNING]
-This callout highlights vital information. You are encouraged to read the information found here.
 
 == Summary of contributions
 * *Major enhancement*: Developed the `Model`, `Logic`, `Storage`, and `Ui` infrastructure for transactions.
@@ -50,7 +33,7 @@ If left unfilled, the values taken by the optional arguments are inferred from t
 implementation of optional arguments filled in based on the current filter allows user to provide minimal information to add
 a transaction, which significantly improves user experience.
 ** Highlights: This enhancement required the implementation of an intermediate between `Model` and `Logic`, `TransactionContext` for `Logic` to easily
-access information about the current filter used in the list of transactions. With further development, this can be generalized to a `Context` component
+access information about the current filter used in the list of transactions. Moving forward, this can be generalized to a `Context` component
 that stores read-only information about the state of `Model` that is vital to the function of `Logic`.
 
 * *Minor enhancement*: Added the ability to edit and delete transactions (PR https://github.com/AY1920S1-CS2103T-W12-4/main/pull/175[#175])
@@ -60,30 +43,18 @@ that stores read-only information about the state of `Model` that is vital to th
 * *Other contributions*:
 
 ** Project management:
-*** Managed https://github.com/AY1920S1-CS2103T-W12-4/main/pulls[pull requests (PRs)] by assigning PRs to team members
-*** Managed https://github.com/AY1920S1-CS2103T-W12-4/main/issues[issue tracker] by
-https://github.com/AY1920S1-CS2103T-W12-4/main/issues/created_by/weiyang13[authoring issues], assigning issues to team members, labelling
-issues, and closing issues
-*** Managed https://github.com/AY1920S1-CS2103T-W12-4/main/milestones[project milestones] by creating milestones, assigning issues and PRs to milestones,
-and wrapping up milestones
+*** Managed https://github.com/AY1920S1-CS2103T-W12-4/main/pulls[pull requests (PRs)],
+https://github.com/AY1920S1-CS2103T-W12-4/main/issues[issue tracker] and
+https://github.com/AY1920S1-CS2103T-W12-4/main/milestones[project milestones]
 *** Refactored existing code of Address Book 3 to IchiFund (PR https://github.com/AY1920S1-CS2103T-W12-4/main/pull/252[#252])
 
 ** Enhancements to existing features:
 *** Restructured architecture of code to enable separate parsing for features in different tabs using the same command line
 (PR https://github.com/AY1920S1-CS2103T-W12-4/main/pull/137[#137])
 *** Modified sample data for initialization of IchiFund (PR https://github.com/AY1920S1-CS2103T-W12-4/main/pull/239[#239])
-
-** Testing:
-*** Added tests for transaction component and parsing (PRs https://github.com/AY1920S1-CS2103T-W12-4/main/pull/169[#169],
- https://github.com/AY1920S1-CS2103T-W12-4/main/pull/252[#252])
-
-** Documentation: hi
-*** Modified the section on https://github.com/AY1920S1-CS2103T-W12-4/main/blob/master/docs/UserGuide.adoc#ichifund-basics[IchiFund Basics]
+*** Modified documentation on
+https://github.com/AY1920S1-CS2103T-W12-4/main/blob/master/docs/UserGuide.adoc#ichifund-basics[existing features]
 to be more reader-friendly
-*** Wrote the sections on https://ay1920s1-cs2103t-w12-4.github.io/main/UserGuide.html#Navigation[Navigation]
-and https://ay1920s1-cs2103t-w12-4.github.io/main/UserGuide.html#Transactions[Transactions] to User Guide
-*** Wrote the sections on https://ay1920s1-cs2103t-w12-4.github.io/main/DeveloperGuide.html#separate-parsing-and-tab-switching[Separate Parsing and Tab Switching]
-and https://ay1920s1-cs2103t-w12-4.github.io/main/DeveloperGuide.html#transaction[Transactions] in the Developer Guide.
 
 ** Community:
 *** Reported bugs and suggestions for other teams in the class (examples:  https://github.com/AY1920S1-CS2103T-T09-1/main/issues/196[196], https://github.com/AY1920S1-CS2103T-T09-1/main/issues/197[197],
@@ -104,14 +75,14 @@ include::../UserGuide.adoc[tag=addtx]
 and https://ay1920s1-cs2103t-w12-4.github.io/main/UserGuide.html#Transactions[Transactions] sections of the User Guide._
 |===
 
+<<<
+
 == Contributions to the Developer Guide
 
 |===
 |_Given below is a sample of what I have contributed to the Developer Guide. It showcases my ability to write technical
 documentation and the technical depth of my contributions to the project._
 |===
-
-include::../DeveloperGuide.adoc[tag=tabswitching]
 
 include::../DeveloperGuide.adoc[tag=overviewtx]
 
