Add section numbers for ppp

--- a/docs/team/na-nazhou.adoc
+++ b/docs/team/na-nazhou.adoc
@@ -5,6 +5,7 @@
 
 == PROJECT: Mark
 
+:sectnums:
 == Overview
 
 *Mark* is designed for those who prefer to use a desktop application for managing bookmarks as well as tasks related to web pages.
