--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1942,7 +1942,63 @@ Expected: Leo responds with an error message that the command is invalid.
 
 === Testing Inventory Tab Features
 . Adding an item
-.. Prerequisites: The description, category,
+.. Prerequisites: The description, category, quantity and cost prefixes must be present. Quantity and cost must be a
+positive number less than 10,000. Quantity cannot be 0.
+.. Test case 1: [blue]`add d/Shorts c/Clothing q/10 co/9 p/9` +
+Expected: Leo responds with a success message with a brief description of the Item's information.
+.. Test case 2: [blue]`add d/ c/ q/10 co/9` +
+Expected: Leo responds with a success message with a brief description of the Item's information, where the description
+and category are empty, and the price is absent.
+.. Test case 3: [blue]`add d/Shorts c/Clothing q/10 co/9999 p/9999` +
+Expected: Leo responds with an error message that the total is too large.
+.. Test case 4: [blue]`add d/Shorts c/Clothing q/-1 co/9 p/9` +
+Expected: Leo responds with an error message with the specifications for valid numbers
+(positive number less than 10,000).
+.. Test case 5: [blue]`add d/Shorts c/Clothing q/number co/99 p/99` +
+Expected: Leo responds with an error message with the specifications for valid numbers
+(positive number less than 10,000).
+.. Test case 6: [blue]`add d/Shorts c/Clothing q/10 co/9 p/12` +
+[blue]`add d/shorts c/clothes q/50 co/8 p/9` +
+Expected: Leo responds with a success message, stating that the item already exists and that the quantity,
+cost/unit and price have been updated. The item will have the following information: +
+Description: Shorts +
+Category: Clothing +
+Quantity: 60 +
+Cost: 8.17 +
+Price: 9.00
+
+. Deleting an item
+.. Prerequisites: The index/description must exist in the list.
+.. Test case 1: [blue]`delete 1` +
+Expected: Leo responds with a success message and a brief description of the deleted item.
+.. Test case 2: [blue]`delete shorts` +
+Expected: Leo responds with a success message and a brief description of the deleted shorts item, given that an item
+with the description shorts had existed in the list.
+.. Test case 3: [blue]`delete -1` +
+Expected: Leo responds with an error message that there is no item at that index.
+.. Test case 4: [blue]`delete shirt` +
+Expected: If the list does not contain an item with the description shirt, Leo responds with an error message that there
+is no such item.
+
+. Editing an item
+.. Test case 1: [blue]`edit 1 d/new description` +
+Expected: The item at index 1 now has the description "new description". Leo responds with a success message comparing
+the item before and after the edit.
+.. Test case 2: [blue]`edit 1 d/` +
+Expected: The item at index 1 now has an empty description. Leo responds with a success message comparing
+the item before and after the edit.
+.. Test case 2: [blue]`edit` +
+Expected: Leo responds with an error message detailing the correct edit command format.
+.. Test case 2: [blue]`edit 1` +
+Expected: Leo responds with an error message that the item was not edited and detailing the correct edit command format.
+
+. Sorting the items
+.. Test case 1: [blue]`sort description` +
+Expected: Leo responds with a success message even if the list is empty.
+.. Test case 2: [blue]`sort category` +
+Expected: Leo responds with a success message even if the list is empty.
+.. Test case 3: [blue]`sort quantity` +
+Expected: Leo responds with a success message even if the list is empty.
 
 === Testing Cashier Tab Features
 
