--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -37,12 +37,17 @@ GUI apps!
 ====
 *Command Format*
 
-* Words in `[SQUARE BRACKETS]` are mandatory parameters to be supplied by the user e.g. in `add [n/NAME] [d/DESCRIPTION] [a/AMOUNT]`, `NAME` `DESCRIPTION` and `AMOUNT` are parameters which can be used as `expense add n/buy a book d/math book a/10`.
+* Parameters in the format `prefix/[SQUARE BRACKETS]` are _mandatory parameters_ to be supplied by the user
+e.g. in `add n/[NAME] a/[AMOUNT]`, `NAME` and `AMOUNT` are mandatory parameters
+which should be supplied, as in: `add n/buy a book a/10.00`.
 * The mandatory parameters can be in any order.
-* Default values can be specified in the square brackets, e.g `[NUM_ENTRIES, DEFAULT = 10]`. If the user does not provide a value for that parameter, it will default to the default value stated.
-* Some commands may have optional parameters. These are denoted by using `<ANGULAR BRACKETS>`, e.g When you see `<a/AMOUNT>`, the command can be either `expense edit 2 n/lunch a/10` or `expense edit 2 n/lunch`.
-* Flags can be in any order.
-* Items with `…`​ after them can be used zero or more times e.g. `<t/TAG>...` can be used as `{nbsp}` (i.e. 0 times), `t/bills` or even `t/bills t/fees` etc.
+* Some commands may have _optional parameters_. These are denoted by using `prefix/<ANGULAR BRACKETS>`,
+e.g When you see `a/<AMOUNT>`, the command can be either `edit 2 n/lunch a/10` or `edit 2 n/lunch`.
+* Default values can be specified in the angular brackets, e.g `prefix/<NUM_ENTRIES = 10>`. If the user does not
+provide a value for that parameter, it will default to the default value stated.
+* Optional parameters can be in any order.
+* Parameters with `…`​ after them can be used zero or more times e.g. `t/<TAG>...` can be used as `{nbsp}` (i.e. 0 times), `t/bills` or even `t/bills t/fees` etc.
+* Additional information on the parameters can be detailed in a section labelled `INFO` under the format if necessary.
 
 ====
 
@@ -504,7 +509,7 @@ for each command goes into further detail about the supported options for that c
 
 With this, it becomes extremely easy for you to perform advanced queries on specific types of statistics! For example,
 if you want to track the weekly total spending of all your expenses that contain the word "food" over a specific month, simply type `display-stats timeline interval/week`
-followed by `find d/food sd/01/01/2019 ed/01/02/2019`! (Unsure about this command? Refer to <<Find>> for more information) +
+followed by `find d/food sd/01/01/2019 ed/01/02/2019`. (Unsure about this command? Refer to <<Find>> for more information) +
 {nbsp} +
 
 
