--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -808,9 +808,6 @@ The factors affecting the calculation of the recommendation value is summarized 
 |===
 //end::recommendationpenalty[]
 
-[IMPORTANT]
-Recommendation turns auto-sorting OFF.
-
 ****
 Format: `recommend`
 ****
@@ -825,8 +822,7 @@ image::recommend.png[]
 |===
 
 [NOTE]
-To clear the recommendations, use the `list` or `add` command.
-Recommendations will be cleared too using specific sorting commands such as `sort`.
+To clear the recommendations, use the `list` or `add` or any sorting related command.
 
 [NOTE]
 The recommended amount to spend per meal is calculated by `budget / (daysToExpiry * 2)` under the assumption that the
